# oura-toolkit

./: .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  README.md  dist-workspace.toml  justfile
.agentsync/: agentsync.toml
.agentsync/memory/: AGENTS.md
.claude-plugin/: marketplace.json
.claude/skills/review-loop/: SKILL.md
.github/workflows/: ci.yml  cut-release.yml  docs-deploy.yml  publish-cli-npm.yml  publish-crates.yml  publish-sdks.yml  release.yml  spec-drift.yml
cli/oura-cli/: Cargo.toml
cli/oura-cli/src/: auth.rs  main.rs
cli/oura-toolkit-cli/: Cargo.toml  build.rs  openapi.json
cli/oura-toolkit-cli/dist-assets/: oura.1  oura.bash  oura.fish  oura.zsh
cli/oura-toolkit-cli/src/: api.rs  auth.rs  commands.rs  contract.rs  dashboard.rs  health.rs  lib.rs  loopback.rs  main.rs  mcp.rs  output.rs  passthrough.rs
cli/oura-toolkit-cli/tests/: api_passthrough.rs  auth_commands.rs  bundled_spec.rs  cli_contract.rs  completion.rs  data_commands.rs  docs_tripwire.rs  headless_auth.rs  health_commands.rs  mcp_server.rs  mcp_stdio.rs  sandbox.rs
cli/oura-toolkit-cli/tests/common/: mod.rs
codegen/: csharp.yaml  docs-codesamples.jq  docs-spec.jq  generated-header.rs  go.yaml  java.yaml  maven-settings.xml  overlay.jq  progenitor-downconvert.jq  python.yaml  rustfmt-shim.sh  spec-drift.sh  ts-package-overlay.jq  ts-package-postpatch.jq  typescript.yaml  version.sh
codegen/conformance/: auth-cases.json
codegen/smoke/: smoke.cjs  smoke.py
codegen/smoke/csharp-smoke/: Program.cs  csharp-smoke.csproj
codegen/smoke/go-smoke/: go.mod  main.go
codegen/smoke/java-smoke/: pom.xml
docs/: cli-contract.md  feasibility-2026-07-03-apple-healthkit-multi-source.md  review-2026-07-02-bootstrap-critique.md  vision-2026-07-03-personal-health-context.md
docs-site/: astro.config.mjs  package-lock.json  package.json
docs-site/public/: CNAME
docs-site/src/components/: LastUpdated.astro
docs-site/src/content/docs/: index.mdx
docs-site/src/styles/: theme.css
plugins/oura-toolkit/: .mcp.json  README.md
plugins/oura-toolkit/.claude-plugin/: plugin.json
plugins/oura-toolkit/skills/morning-checkin/: SKILL.md
plugins/oura-toolkit/skills/schedule-outlook/: SKILL.md
plugins/oura-toolkit/skills/wellness-report/: SKILL.md
sdks/csharp/: GENERATED
sdks/csharp/api/: README.md
sdks/csharp/api/.openapi-generator/: FILES
sdks/csharp/api/api/: openapi.yaml
sdks/csharp/auth/: README.md
sdks/go/: GENERATED  go.mod  go.sum
sdks/go/api/: README.md  api_daily_activity_routes.go  api_daily_cardiovascular_age_routes.go  api_daily_readiness_routes.go  api_daily_resilience_routes.go  api_daily_sleep_routes.go  api_daily_spo2_routes.go  api_daily_stress_routes.go  api_enhanced_tag_routes.go  api_heart_rate_routes.go  api_personal_info_routes.go  api_rest_mode_period_routes.go  api_ring_battery_level_routes.go  api_ring_configuration_routes.go  api_sandbox_routes.go  api_session_routes.go  api_sleep_routes.go  api_sleep_time_routes.go  api_tag_routes.go  api_vo2_max_routes.go  api_webhook_subscription_routes.go  api_workout_routes.go  client.go  configuration.go  model_create_webhook_subscription_request.go  model_daily_resilience_model.go  model_enhanced_tag_model.go  model_ext_api_v2_data_type.go  model_http_validation_error.go  model_long_term_resilience_level.go  model_multi_document_response_daily_resilience_model_.go  model_multi_document_response_enhanced_tag_model_.go  model_multi_document_response_public_daily_activity_.go  model_multi_document_response_public_daily_cardiovascular_age_.go  model_multi_document_response_public_daily_readiness_.go  model_multi_document_response_public_daily_sleep_.go  model_multi_document_response_public_daily_sp_o2_.go  model_multi_document_response_public_daily_stress_.go  model_multi_document_response_public_modified_sleep_model_.go  model_multi_document_response_public_rest_mode_period_.go  (+60 more)
sdks/go/api/.openapi-generator/: FILES
sdks/go/api/api/: openapi.yaml
sdks/go/auth/: conformance_test.go  doc.go  errors.go  example_test.go  lock_test.go  lock_unix.go  lock_windows.go  manager.go  manager_test.go  metadata.go  metadata_test.go  oauth.go  oauth_test.go  redact_test.go  store.go  store_test.go  store_unix_test.go
sdks/java/: GENERATED
sdks/java/api/: README.md  build.gradle  pom.xml
sdks/java/api/.openapi-generator/: FILES
sdks/java/api/api/: openapi.yaml
sdks/java/auth/: pom.xml
sdks/python/: GENERATED  README.md  pyproject.toml
sdks/python/oura_toolkit/: __init__.py
sdks/python/oura_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/oura_toolkit/api/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdks/python/oura_toolkit/auth/: __init__.py  _config.py  errors.py  manager.py  metadata.py  store.py
sdks/python/tests/: conftest.py  test_conformance.py  test_locking.py  test_manager.py  test_metadata.py  test_py_typed.py  test_redaction.py  test_store.py
sdks/rust/oura-api/: Cargo.toml  GENERATED
sdks/rust/oura-api/src/: lib.rs
sdks/rust/oura-auth/: Cargo.toml  build.rs
sdks/rust/oura-auth/src/: client.rs  error.rs  lib.rs  metadata.rs  oauth.rs  store.rs
sdks/rust/oura-toolkit-api/: Cargo.toml  GENERATED
sdks/rust/oura-toolkit-api/src/: lib.rs
sdks/rust/oura-toolkit-auth/: Cargo.toml  build.rs
sdks/rust/oura-toolkit-auth/src/: client.rs  error.rs  lib.rs  metadata.rs  oauth.rs  store.rs
sdks/rust/oura-toolkit-auth/tests/: conformance.rs
sdks/typescript/: GENERATED
sdks/typescript/api/: LICENSE  README.md  package.json
sdks/typescript/api/.openapi-generator/: FILES
sdks/typescript/api/src/: runtime.ts
sdks/typescript/auth/: README.md  package.json  tsconfig.json
sdks/typescript/auth/src/: client.ts  errors.ts  index.ts  metadata.ts  (+1 more)
sources/oura-toolkit-health/: Cargo.toml
sources/oura-toolkit-health/src/: apple.rs  calendar.rs  engine.rs  error.rs  habits.rs  lib.rs  model.rs  store.rs  toggl.rs
sources/oura-toolkit-health/tests/: apple_import.rs
(+441 files in other folders)
