# oura-toolkit — cargo workspace.
#
# Members are the two Rust SDK crates plus the CLI app. Rust is NOT privileged:
# `sdks/rust/oura-api` (generated client) and `sdks/rust/oura-auth` (hand-written auth
# companion) sit next to the future breadth-SDK siblings under `sdks/<lang>/`; the CLI is an
# app, hence `cli/`. See CLAUDE.md for the full architecture.
[workspace]
resolver = "2"
members = [
    "sdks/rust/oura-api",
    "sdks/rust/oura-auth",
    "cli/oura-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/spxrogers/oura-toolkit"
homepage = "https://github.com/spxrogers/oura-toolkit"
authors = ["steven rogers"]

# Shared, pinned dependencies. Members opt in with `<dep>.workspace = true`; unused entries
# here are not fetched. Versions are firmed up as each crate is wired in its own issue.
[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal"] }

# transport for the generated client; the auth companion plugs into this stack
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# cli
clap = { version = "4", features = ["derive", "env"] }

# misc
url = "2"
thiserror = "2"
anyhow = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }

# internal crates
oura-api = { path = "sdks/rust/oura-api" }
oura-auth = { path = "sdks/rust/oura-auth" }
