[package]
name = "oura-cli"
description = "CLI and STDIO MCP server for the Oura Ring API v2 (auth setup/login, data commands, --mcp)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "oura-cli"
path = "src/main.rs"

[dependencies]
oura-auth = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
open = "5"
uuid = { version = "1", features = ["v4"] }
# oura-api is wired for data commands in #9; --mcp (rmcp) in #10.
