[package]
name = "oura-toolkit-cli"
description = "CLI and STDIO MCP server for the Oura Ring API v2 (auth setup/login, data commands, mcp)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

# The crate is `oura-toolkit-cli` but installs a binary named `oura` (the command users type).
[[bin]]
name = "oura"
path = "src/main.rs"

[dependencies]
oura-toolkit-api = { workspace = true }
oura-toolkit-auth = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
open = "5"
rpassword = "7"
uuid = { version = "1", features = ["v4"] }
# `oura mcp` STDIO server (#10): official MCP SDK. Default features (server + macros) plus
# stdio transport and schemars-derived tool parameter schemas.
rmcp = { version = "2.1", features = ["transport-io", "schemars"] }
schemars = "1"

# build.rs reads spec/openapi.json to emit the MCP tool descriptions (see build.rs).
[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
# in-process MCP client for the hermetic `oura mcp` server tests
rmcp = { version = "2.1", features = ["client", "transport-io", "schemars"] }
# hermetic 401-refresh tests point the token endpoint at wiremock via this seam
oura-toolkit-auth = { workspace = true, features = ["test-util"] }
wiremock = "0.6"
# Real IANA tz data for the DST gap/fold tests on DateRange::utc_bounds_in.
chrono-tz = "0.10"
serde_json = { workspace = true }
tempfile = "3"
# binary-level contract tests (exit codes / stream discipline) — see docs/cli-contract.md
assert_cmd = "2"
predicates = "3"
