[package]
name = "oura-auth"
description = "Non-interactive auth companion for the Oura Ring API: token store, confidential-client refresh with rotation, and Bearer-injecting reqwest middleware. Reads OAuth metadata from the vendored spec."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Implemented in issue #7 (reqwest, reqwest-middleware, serde, time, thiserror, …).
