[package]
name = "oura-toolkit-auth"
description = "Non-interactive auth companion for the Oura Ring API: token store, confidential-client refresh with rotation, and Bearer-injecting reqwest middleware. Reads OAuth metadata from the vendored spec."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
