[package]
name = "oura-toolkit-auth"
description = "Non-interactive auth companion for the Oura Ring API: token store, confidential-client refresh with rotation, and Bearer-injecting reqwest middleware. Reads OAuth metadata from the vendored spec."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
# Integration tests assume the monorepo (bundled-spec sync walks to the repo root);
# they are meaningless inside a published package.
exclude = ["tests/"]
build = "build.rs"

[dependencies]
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
http = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
# unique-temp-file atomic writes in the store (concurrent writers can't clobber a shared tmp)
tempfile = "3"

[features]
# Exposes test-only seams (e.g. token-endpoint URL override) so DOWNSTREAM crates'
# hermetic tests can point refresh at a mock server. Never enabled in production builds.
test-util = []

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
